// Copyright (c) 2024 Advanced Micro Devices, Inc. All Rights Reserved.
syntax = "proto3";

package Schola;

import "Points.proto";

message AgentStateUpdate {
    DictPoint actions = 1;
}

message EnvironmentStep {
    map<int32, AgentStateUpdate> updates = 1;
}